--- a/Syllabus/CourseSyllabus.tex
+++ b/Syllabus/CourseSyllabus.tex
@@ -194,33 +194,32 @@ Johnson 2013. Presentations are (all from Kuhn and Johnson): Ch. 3.1-3.3: Casey;
   and model tuning re-visited.\\
 \emph{Reading:} James et al.: Ch. 3. Kuhn and Johnson: Chs. 4
 (re-visited), 5, 6.1-2.\\
-\emph{Competition:} Kaggle: Current competition with continuous
-outcome
+\emph{Tuesday:} Explore the data for the new competition. Try using a linear model to predict the new competition data. What is the best RMSLE you can achieve in the training dataset? In the testing dataset?\\
+Be prepared to discuss: Why is this competition evaluated with RMSLE rather than RMSE? What pre-processing do you think might be important, based on EDA of the dataset? Can you think of any ways you might want to use the predictors to engineer new features?\\
+\emph{Thursday:} Try fitting one of the types of models that requires tuning (e.g., k-NN, random forest) using functions from the caret package. What is the best RMSLE you can achieve in the training dataset? In the testing dataset?\\ 
+Be prepared to discuss: How can you adapt the caret functions to use RMSLE rather than RMSE when tuning? Are you running into any computational problems given the size of the dataset? If so, how are you handling them?\\
+\emph{Competition:} Kaggle: Bike sharing demand: \url{https://www.kaggle.com/c/bike-sharing-demand}
 
 \item \textbf{Week 7:} Linear model selection and
   regularization. Shrinkage methods and dimension reduction methods.\\
 \emph{Reading:} James et al.: Ch. 6.\\
-\emph{Competition:} Kaggle: Current competition with continuous
-outcome
+\emph{Competition:} Kaggle: Bike sharing demand: \url{https://www.kaggle.com/c/bike-sharing-demand}
 
 \item \textbf{Week 8:} Regression models: Non-linear regression
   models, regression trees. Measuring predictor importance.\\
 \emph{Reading:} James et al.: Ch. 7. Kuhn and Johnson: Chs. 7 and 8.\\
-\emph{Competition:} Kaggle: Current competition with continuous
-outcome
+\emph{Competition:} Kaggle: Bike sharing demand: \url{https://www.kaggle.com/c/bike-sharing-demand}
 
 \item \textbf{Week 9:} Regression models: Regression trees. Feature selection /
   engineering re-visisted.\\
 \emph{Reading:} James et al.: Ch. 8 (re-visited). Kuhn and Johnson:
 Chs. 3 and 19 (re-visited).\\
-\emph{Competition:} Kaggle: Current competition with continuous
-outcome
+\emph{Competition:} Kaggle: Bike sharing demand: \url{https://www.kaggle.com/c/bike-sharing-demand}
 
 \item \textbf{Week 10:} Student team presentations on final model for current Kaggle
   competition.\\
 \emph{Reading:} Background information on this year's Data Mining Cup\\
-\emph{Competition:} Kaggle: Current competition with continuous
-outcome\\
+\emph{Competition:} Kaggle: Bike sharing demand: \url{https://www.kaggle.com/c/bike-sharing-demand}\\
 \textbf{Graded products:} Students present final predictive model for
 current Kaggle competition.\\
 
